--- a/conf/supportability.yaml
+++ b/conf/supportability.yaml
@@ -1,33 +1,34 @@
-'master':
-  providers:
-    infra:
-      - virtualcenter:
-        - 5.5
-        - 6.0
-        - 6.5
-        - 6.7
-      - rhevm:
-        - 4.1
-        - 4.2
-        - 4.3
-      - scvmm:
-        - 2012
-        - 2016
-    cloud:
-      - openstack:
-        - 11
-        - 12
-        - 13
-        - 14
-      - ec2
-      - gce
-      - azure:
-        - common
-        - msdn
-    container:
-      - openshift:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.9
-        - 3.11
+supportability:
+  'master':
+    providers:
+      infra:
+        - virtualcenter:
+          - 5.5
+          - 6.0
+          - 6.5
+          - 6.7
+        - rhevm:
+          - 4.1
+          - 4.2
+          - 4.3
+        - scvmm:
+          - 2012
+          - 2016
+      cloud:
+        - openstack:
+          - 11
+          - 12
+          - 13
+          - 14
+        - ec2
+        - gce
+        - azure:
+          - common
+          - msdn
+      container:
+        - openshift:
+          - 3.5
+          - 3.6
+          - 3.7
+          - 3.9
+          - 3.11
