Clean up test meta
ignore_stream where needed
remove title from polarion metadata
add title to ignored_fields for polarion_tools.conf

Remove duplicate sdn security group port test
Fix provider parametrization on manual test

--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -86,6 +86,8 @@ docstrings:
 
     ignored_fields:
         description: "use test docstring instead"
+        # test case title is set by function name, don't allow re-titling via meta
+        title: "test case function name is used"
 
     valid_values:
         caseimportance:
