--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ jobs:
       script:
         - pytest cfme/utils/tests cfme/modeling/tests requirements --dummy-appliance
         - pytest -p no:cfme cfme/tests/test_modules_importable.py --dummy-appliance --long-running
-        - pytest -v --dummy-appliance --collect-only --include-manual --long-running
+        - pytest --dummy-appliance --collect-only --include-manual --long-running
       after_success:
         - coveralls
 
