Added cfme_data.yml.template file
Signed-off-by: Ganesh Hubale <ghubale@redhat.com>

--- a/conf/cfme_data.yaml.template
+++ b/conf/cfme_data.yaml.template
@@ -677,3 +677,6 @@ vm_console:
         city: Durham
         organization: CFME
         organizational_unit: QE
+automate_links:
+    datastore_repositories:
+        manageiq_automate: https://github.com/RedHatQE/ManageIQ-automate-git.git
