Added MA requirement and manual test cases
Signed-off-by: Ganesh Hubale <ghubale@redhat.com>

--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -126,6 +126,7 @@ docstrings:
             - Events
             - GenericObjects
             - Infra
+            - MigrationAnalytics
             - Optimize
             - Provisioning
             - Quota
