Transfer HA tests from sbulage to jhenner.
There is naming clash of centralized control (at the moment also
often called Replication) with HA tests, marked as Replication as well.
I belive these are very different features. So I've:

 * Created new polarion marker for the Ha proxy tests.
 * Set polarion markers have been set on the tests.
 * Set the casecomponent to HAProxy on HA proxy related tests.

--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -132,6 +132,7 @@ docstrings:
             - Provisioning
             - Quota
             - Replication
+            - HAProxy
             - Reporting
             - Rest
             - SelfServiceUI
