Updating requirement markers, adding priority and re-assigning

--- a/conf/polarion_tools.yaml
+++ b/conf/polarion_tools.yaml
@@ -49,6 +49,7 @@ custom_fields:
     - endsin
     - legacytest
     - multiproduct
+    - priority_id
     - reqverify
     - setup
     - startsin
