Update requirements freeze

--- a/requirements/package_map.yaml
+++ b/requirements/package_map.yaml
@@ -8,3 +8,5 @@ packages:
   github: PyGithub
   widgetastic: widgetastic.core
   widgetastic_patternfly: widgetastic.patternfly
+  zmq: pyzmq
+  keycloak: python-keycloak
