Update pre-commit config, flake8 move and enable pyupgrade

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,9 @@ repos:
   - id: check-yaml
   - id: debug-statements
     exclude: ^(sprout|scripts|cfme/fixtures/rdb.py)
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.7.9
+  hooks:
   - id: flake8
     language_version: python3.7
     additional_dependencies: [polarion-docstrings, bugzilla-docstrings]
@@ -31,4 +34,5 @@ repos:
   hooks:
   - id: pyupgrade
     language_version: python3.7
-    <<: *exclude
+    args: [--py36-plus]
+    #<<: *exclude
