--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -5,20 +5,49 @@ default:
 bugzilla:
     username: john.doe@company.test
     password: password
-rhevm31:
+azure_creds_key:
+    domain: azure
+        password: password
+        powershell_host: <ip with powershell>
+        powershell_password: password
+        powershell_username: root
+        storage_key: <storage key ID>
+        subscription_id: <subscription ID>
+        subscription_name: Pay-As-You-Go
+        tenant_id: <tenant ID>
+        type: azure
+        ui_password: password
+        ui_username: azureaccount@email
+        username: <username>
+azure_instance_creds_key:
+    username: root
+    password: password
+openstack_creds_key:
     username: admin
     password: password
-vsphere5:
+vsphere65-nested_creds_key:
     username: admin
     password: password
-aws:
-    username: AKIABCDEFGHIJKL
+vspherehost-cred_key:
+    username: root
+    password: password
+ssa_centos_creds_key:
+    username: root
+    password: password
+ssa_fedora_creds_key:
+    username: root
+    password: password
+ssa_ubuntu_creds_key:
+    username: root
+    password: password
+ssa_rhel_creds_key:
+    username: root
+    password: password
+amazon_creds_key:
+    username: IAMUSERID
     password: secret_access_key
-rhos:
-    username: admin
-    password: password
-esx:
-    username: admin
+cirros_creds_key:
+    username: root
     password: password
 ipmi:
     username: admin
@@ -44,6 +73,9 @@ vcloud:
     password: smartvm
 ssh:
     username: root
+    password: password
+random_vm_ssh_creds_key:
+    username: fedora
     password: password
 netapp-storage:
     username: root
