--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -46,6 +46,19 @@ ssa_rhel_creds_key:
 amazon_creds_key:
     username: IAMUSERID
     password: secret_access_key
+gce_creds_key:
+    password: password
+    # service account structure mirrors json provided by google
+    service_account:
+        auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
+        auth_uri: https://accounts.google.com/o/oauth2/auth
+        client_email: client-account@email
+        client_id: <client id>
+        client_x509_cert_url: <x509 cert URL for account>
+        private_key: <private key string with \n inline>
+        private_key_id: <private key UUID>
+        project_id: <client account project id>
+        token_uri: https://accounts.google.com/o/oauth2/token
 cirros_creds_key:
     username: root
     password: password
